<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OrderPage">

  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="65dp"
      android:layout_height="0dp"
      android:background="@color/assignBgColor"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/contDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_hot_deal" />

    <TextView
        android:id="@+id/contacts"
        android:layout_width="100dp"
        android:layout_height="145dp"
        android:layout_marginBottom="70dp"

        android:gravity="center"
        android:rotation="270"
        android:text="@string/contacts_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/about"
        android:layout_width="100dp"
        android:layout_height="145dp"

        android:gravity="center"
        android:rotation="270"
        android:text="@string/about_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_scene"
        android:layout_width="100dp"
        android:layout_height="145dp"

        android:gravity="center"
        android:rotation="270"
        android:text="@string/main_scene_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
  </android.support.constraint.ConstraintLayout>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="60dp"

      android:text="@string/logo_of_app1"
      android:textColor="@color/black"
      android:textSize="40sp"
      app:layout_constraintStart_toEndOf="@+id/constraintLayout"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="60dp"

      android:text="@string/logo_of_app2"
      android:textColor="@color/name_of_app"
      android:textSize="40sp"
      app:layout_constraintStart_toEndOf="@+id/textView3"
      app:layout_constraintTop_toTopOf="parent" />

  <ListView
      android:id="@+id/orders_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginStart="40dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="40dp"
      android:layout_marginBottom="30dp"
      app:layout_constraintBottom_toTopOf="@+id/clear_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/constraintLayout"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <Button
      android:id="@+id/clear_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/orders_list"
      android:layout_marginBottom="40dp"
      android:background="@drawable/clear_button"
      android:padding="20dp"
      android:text="@string/clear_cart"
      android:textAllCaps="false"
      android:textColor="@android:color/white"
      android:textSize="22sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/constraintLayout" />

</android.support.constraint.ConstraintLayout>