<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="20dp"
        android:paddingBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/courseBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="30dp"

            android:background="@color/black">

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:transitionName="courseImage"
                app:srcCompat="@drawable/ic_vm" />

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"

                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="TextView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"

                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/course_start_date" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"

                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/course_level" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/courseDate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"

                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/course_start_date" />
                <TextView
                    android:id="@+id/courseLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"

                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/course_level" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>